--- a/template/offline/style.css
+++ b/template/offline/style.css
@@ -245,12 +245,14 @@ article .article-content{
 }
 
 .animate_fade{
+    -webkit-animation: fadeIn linear 0.5s infinite;
+    -o-animation: fadeIn linear 0.5s infinite;
+    -moz-animation: fadeIn linear 0.5s infinite;
+    -ms-animation: fadeIn linear 0.5s infinite;
     animation: fadeIn linear 0.5s infinite;
 }
 
 @keyframes fadeIn{
-    from { fill: none; }
-    to { fill: var(--background-dark); }
+    from { fill-opacity: 0; }
+    to { fill-opacity: 1; }
 }
-
-
