--- a/template/styling.html
+++ b/template/styling.html
@@ -51,13 +51,13 @@
                 <input type="text" name="test" id="" placeholder="Type Here">
                 <br>
                 <br>
+                <input type="text" name="test" id="" placeholder="Type Here">
+
+                <br><br>
                 <button class="button_blue">Light Blue Test Button</button>
                 <p>
                     This establishes the main-axis, thus defining the direction flex items are placed in the flex container. Flexbox is (aside from optional wrapping) a single-direction layout concept. Think of flex items as primarily laying out either in horizontal rows or vertical columns.
                 </p>
-                <object class="w-100">
-                    <embed src="../Designer/logo2/logo-05.svg" type="image/svg+xml">
-                </object>
                 <svg class="logo">
                     <use href="#logo"></use>
                 </svg>
